# Math2eb

./: README.md
BetterMath/: pyproject.toml
BetterMath/math2eb/: __init__.py
BetterMath/tests/: test_bettermath.py
