[tool.poetry]
name = "math2eb"
version = "0.1.1"
description = "A better math module for python"
authors = ["O.Plimer"]

[project.urls]
"Homepage" = "https://github.com/Owen7000/Math2eb"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
